# ark-service

./: .dockerignore  .gitignore  .markdownlint.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
.github/workflows/: docker-publish.yml
src/: ark.rs  check_character.rs  config.rs  error.rs  lib.rs  main.rs  minting.rs  server.rs  shoulder.rs  validation.rs
src/server/: handlers.rs  models.rs  router.rs  run.rs
