
[package]
name = "ark-service"
version = "0.1.0-alpha"
edition = "2024"
authors = ["Daniel Jeller"]
description = "ARK (Archival Resource Key) identifier minting, validation, and resolution service"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rand = "0.9.2"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5"
urlencoding = "2.1"
